<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Fruitis</string>
    <string name="TxtPrincipal">Form Fruitis</string>
    <string name="name">Name...</string>
    <string name="weight">Weight</string>
    <string name="rotten">Rotten</string>
    <string name="add">Add</string>
    <string name="TxtPrincipal2">Search Fruit</string>
    <string name="getAll">Get All</string>
    <string name="getLast">Get Last</string>
    <string name="getByName">Get By Name</string>
    <string-array name="spinner">
        <item>Sweet</item>
        <item>Salty</item>
        <item>Sour</item>
        <item>Spicy</item>
        <item>Bitter</item>
        <item>Umani</item>
    </string-array>
    <string name="itemEliminar">Delete</string>
    <string name="itemListar">Get List</string>
    <string name="botonEliminar">Delete</string>
</resources>